<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/comics_container"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:layout_marginBottom="@dimen/condensedVerticalMargin"
  android:layout_marginEnd="@dimen/standardHorizontalMargin"
  android:layout_marginStart="@dimen/standardHorizontalMargin"
  android:layout_marginTop="@dimen/condensedVerticalMargin">

  <RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentStart="true"
    android:layout_alignParentTop="true"
    android:background="?attr/selectableItemBackground"
    android:paddingBottom="8dp"
    android:paddingLeft="12dp"
    android:paddingRight="12dp"
    android:paddingTop="8dp"
    tools:ignore="UselessParent">

    <com.github.siyamed.shapeimageview.RoundedImageView
      android:id="@+id/comic_logo_iv"
      android:layout_width="75dp"
      android:layout_height="75dp"
      android:layout_alignParentStart="true"
      android:layout_centerInParent="true"
      android:contentDescription="@string/comic_logo"
      android:scaleType="fitXY"
      android:src="@color/material_grey_500"
      app:siBorderAlpha="0.0"
      app:siRadius="6dp"
      app:siSquare="true"/>

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginStart="16dp"
      android:layout_toEndOf="@id/comic_logo_iv"
      android:layout_toStartOf="@+id/favorite_iv"
      android:orientation="vertical">

      <com.nextdots.mycomics.custom_views.font.RobotoTextView
        android:id="@+id/comic_title_tv"
        style="@style/Body2Style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/comic_title"/>

      <com.nextdots.mycomics.custom_views.font.RobotoTextView
        android:id="@+id/comic_price_tv"
        style="@style/CaptionStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/comic_price"
        android:textColor="@color/material_green_500"/>

    </LinearLayout>

    <ImageView
      android:id="@+id/favorite_iv"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentEnd="true"
      android:layout_centerVertical="true"
      android:background="?attr/selectableItemBackgroundBorderless"
      android:contentDescription="@string/favorite_mark"
      android:padding="@dimen/condensedHorizontalMargin"
      android:src="@drawable/ic_favorite_black_12"/>

  </RelativeLayout>
</android.support.v7.widget.CardView>